# flask-docker-test

./: .gitignore  Dockerfile  app.py  package-lock.json  package.json  pyproject.toml
templates/: index.html
